# milton

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  ROADMAP.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: accounting.md  adapters.md  boundaries.md  build-vs-adopt.md  findings.md  george-consumer.md  george-gates.md  index.html  landscape.md  outcome-attribution.md  style.css  workplan.md
evals/failure-motifs/: README.md  direct-result-v1.json
evals/george-gates/: README.md  cases-v1.jsonl
reports/: chip-candidate-checkpoint-2026-07-17.md  cost-per-outcome-pilot-2026-07-17.md  fab-receipt-checkpoint-2026-07-17.md  failure-motif-live-checkpoint-2026-07-17.md  failure-motif-method-2026-07-17.md  forge-oss-readiness-2026-07-17.md  george-gate-finding-eval-2026-07-17.md  implementation-audit-2026-07-17.md  market-and-boundary-review-2026-07.md  memory-audit-checkpoint-2026-07-17.md  procedure-promotion-pilot-2026-07-17.md  somm-overlap-tuple-checkpoint-2026-07-17.md  stale-gate-pilot-2026-07-17.md  trust-contract-live-checkpoint-2026-07-17.md
scripts/: release_smoke.py
src/milton/: __init__.py  (+18 more)
tests/: test_accounting.py  test_adapters.py  test_barnowl_effectiveness.py  test_barnowl_research_outcome.py  test_cli.py  test_evaluation.py  test_exports.py  test_fab_receipts.py  test_findings.py  test_generators.py  test_memory_audit.py  test_model.py  test_motifs.py  test_outcomes.py  test_promotion.py  test_relations.py  test_runtime_adapters.py  test_sqlite_adapters.py  test_store.py  test_tuple_evidence.py
(+80 files in other folders)
