[project]
name = "milton-ai"
version = "0.1.0"
description = "Local-first accounting, traceability, and outcome analysis for AI work"
requires-python = ">=3.12"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Marc Lavallee" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
milton = "milton.cli:main"

[project.urls]
Homepage = "https://github.com/lavallee/milton"
Repository = "https://github.com/lavallee/milton"
Issues = "https://github.com/lavallee/milton/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/milton"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "SIM105", "SIM117"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --import-mode=importlib"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
strict = true
